Home > Metatags issue fixed and Remove large white space between branding matters and Back to Top Added AccessiBe script

--- a/assets/scss/partials/_global.scss
+++ b/assets/scss/partials/_global.scss
@@ -562,3 +562,7 @@ CUSTOM ELEMENTS
     transform: translateX(-50%);
     width: fit-content;
 }
+
+.padding-bottom-0{
+    padding-bottom: 0px !important;
+}
